Add super simple base code

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <div class="license">
-        <div class="number">h82jd29</div>
+        <div class="number" id="license_plate">Your Plate Here</div>
     </div>
+    <input id="refresh_plate" type="button" value="New Plate" />
+    <script src="license.js" type="text/javascript"></script>
 </body>
 </html>
