--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" type="text/css" href="license.css" />
 </head>
 <body>
+    <input id="refresh_plate" type="button" value="New Plate" />
     <div class="license">
         <div class="number" id="license_plate">Your Plate Here</div>
     </div>
-    <input id="refresh_plate" type="button" value="New Plate" />
+    <script src="wordlist_parsed.js" type="text/javascript"></script>
     <script src="license.js" type="text/javascript"></script>
 </body>
 </html>
