--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <input id="refresh_plate" type="button" value="New Plate" />
     <input id="flip_plate" type="button" value="Mirror Plate" />
-    <div class="license" id="license">
+    <div class="license flipped" id="license">
         <div class="number" id="license_plate">Your Plate Here</div>
     </div>
     <script src="wordlist_parsed.js" type="text/javascript"></script>
