--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="license flipped" id="license">
         <div class="number" id="license_plate">Your Plate Here</div>
     </div>
+    <div id="license_plate_plain">Your Plate Here</div>
     <script src="wordlist_parsed.js" type="text/javascript"></script>
     <script src="license.js" type="text/javascript"></script>
 </body>
